warnings reduced data fixes